feature_extraction_convNet.error
  File "train_model.py", line 333
    with tf.variable_scope("Siamese",reuse=None):
    ^
IndentationError: unexpected indent
